force-app/main/default/objects/RWBAA_AR_Data__c/RWBAA_AR_Data__c.object-meta.xml
<CustomObject>
    <label>RWBAA AR Data</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>RWBAA AR Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWBAA AR Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>