force-app/main/default/objects/RWBAA_AR_Data__c/fields/Accounts_Receivable_Alert__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Alert__c</fullName>
    <formula>IF(
OR( MSTS_AR_8_to_14__c &gt; 0,
    MSTS_AR_15_to_30__c &gt; 0,
    MSTS_AR_31_to_45__c &gt; 0,
    MSTS_AR_46_to_60__c &gt; 0,
    MSTS_AR_61_to_90__c  &gt; 0,
    MSTS_AR_91_to_120__c &gt; 0,
    MSTS_AR_121_to_150__c  &gt; 0,
    MSTS_AR_Over_150__c &gt; 0), &quot;AR&quot;,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounts Receivable Alert</label>
    <type>Text</type>
</CustomField>