force-app/main/default/objects/RWBAA_AR_Data__c/fields/Credit_Hold_Alert_Color__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold_Alert_Color__c</fullName>
    <formula>IF( TEXT(Account__r.Credit_Status__c) = &quot;Credit Hold&quot;,&quot;Red&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hold Alert Color</label>
    <type>Text</type>
</CustomField>