force-app/main/default/objects/RWBAA_AR_Data__c/fields/Credit_Limit_Alert__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Alert__c</fullName>
    <formula>IF( 
MSTS_Credit_Limit__c = 0 &amp;&amp; MSTS_Available_Credit__c &lt;&gt; 0, &quot;CL&quot;,
IF(MSTS_Credit_Limit__c = 0 &amp;&amp; MSTS_Available_Credit__c = 0,NULL,
IF(
MSTS_Available_Credit__c / MSTS_Credit_Limit__c &lt;= 0.4,&quot;CL&quot;
,NULL)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Alert</label>
    <type>Text</type>
</CustomField>