force-app/main/default/objects/RWBAA_AR_Data__c/fields/Credit_Limit_Alert_Color__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Alert_Color__c</fullName>
    <formula>IF(
MSTS_Credit_Limit__c = 0 &amp;&amp;  MSTS_Available_Credit__c &lt;&gt; 0, &quot;Red&quot;,
IF(
MSTS_Credit_Limit__c = 0 &amp;&amp; MSTS_Available_Credit__c = 0,NULL,
IF(
AND(
MSTS_Available_Credit__c /  MSTS_Credit_Limit__c &lt;= 0.4,
MSTS_Available_Credit__c /  MSTS_Credit_Limit__c &gt; 0.2), &quot;Yellow&quot;,

IF(
MSTS_Available_Credit__c /  MSTS_Credit_Limit__c &lt;= 0.2 ,
 &quot;Red&quot;
,NULL)
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Alert Color</label>
    <type>Text</type>
</CustomField>