force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_AR_121_to_150__c.field-meta.xml
<CustomField>
    <fullName>MSTS_AR_121_to_150__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>MSTS AR 121 to 150</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>