force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_AR_15_to_30__c.field-meta.xml
<CustomField>
    <fullName>MSTS_AR_15_to_30__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>MSTS AR 15 to 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>