force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_AR_1_to_7__c.field-meta.xml
<CustomField>
    <fullName>MSTS_AR_1_to_7__c</fullName>
    <label>MSTS AR 1 to 7</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>