force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_AR_Over_150__c.field-meta.xml
<CustomField>
    <fullName>MSTS_AR_Over_150__c</fullName>
    <label>MSTS AR Over 150</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>