force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Available_Credit__c</fullName>
    <label>MSTS Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>