force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Bill_Cycle__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Bill_Cycle__c</fullName>
    <label>MSTS Bill Cycle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>