force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Billing_Contact_Email__c</fullName>
    <label>MSTS Billing Contact Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>