force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Billing_Contact_Last_Name__c</fullName>
    <label>MSTS Billing Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>