force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Comment_By__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Comment_By__c</fullName>
    <label>MSTS Comment By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>