force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Comment_Date__c</fullName>
    <label>MSTS Comment Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>