force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Credit_Comments__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Credit_Comments__c</fullName>
    <label>MSTS Credit Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>