force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Credit_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Credit_Customer_Number__c</fullName>
    <label>MSTS Credit Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>