force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Credit_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MSTS Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>