force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Current_Days_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Current_Days_to_Pay__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MSTS Current Days to Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>