force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Deactivation_Date__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Deactivation_Date__c</fullName>
    <label>MSTS Deactivation Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>