force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Deactivation_Reason__c</fullName>
    <label>MSTS Deactivation Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>