force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Deposit_Date__c</fullName>
    <label>MSTS Deposit Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>