force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Disputed_Amount__c</fullName>
    <label>MSTS Disputed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>