force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_In_Recourse__c.field-meta.xml
<CustomField>
    <fullName>MSTS_In_Recourse__c</fullName>
    <label>MSTS In Recourse</label>
    <length>5</length>
    <type>Text</type>
</CustomField>