force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Initial_Activation__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Initial_Activation__c</fullName>
    <label>MSTS Initial Activation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>