force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Net_Due_Total__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Net_Due_Total__c</fullName>
    <label>MSTS Net Due Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>