force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Parent_Cust_Num__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Parent_Cust_Num__c</fullName>
    <label>MSTS Parent Cust Num</label>
    <length>10</length>
    <type>Text</type>
</CustomField>