force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Payment_Terms__c</fullName>
    <label>MSTS Payment Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>