force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Rep_Name__c</fullName>
    <label>MSTS Rep Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>