force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Status__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Status__c</fullName>
    <label>MSTS Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>