force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Total_Aging__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Total_Aging__c</fullName>
    <label>MSTS Total Aging</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>