force-app/main/default/objects/RWBAA_AR_Data__c/fields/MSTS_Unapplied_Payment__c.field-meta.xml
<CustomField>
    <fullName>MSTS_Unapplied_Payment__c</fullName>
    <label>MSTS Unapplied Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>