force-app/main/default/objects/RWBAA_AR_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Credit_Hold_Alert_Color__c</columns>
    <columns>Credit_Limit_Alert_Color__c</columns>
    <columns>Accounts_Receivable_Alert_Color__c</columns>
    <columns>MSTS_AR_121_to_150__c</columns>
    <columns>MSTS_AR_15_to_30__c</columns>
    <columns>MSTS_AR_31_to_45__c</columns>
    <columns>MSTS_AR_46_to_60__c</columns>
    <columns>MSTS_AR_61_to_90__c</columns>
    <columns>MSTS_AR_8_to_14__c</columns>
    <columns>MSTS_AR_91_to_120__c</columns>
    <columns>MSTS_AR_Current__c</columns>
    <columns>MSTS_AR_Over_150__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>